styles.css
/* A-frame styles */
video {
width: 100vw;
height: 100vh;
}

.ar-controls {
position: absolute;
bottom: 0;
left: 50%;
transform: translate(-50%, -50%);
}

.ar-controls img {
width: 100%;
}

#cokeg1 {
display: none;
}

/* Modal styles */

.modal {
display: none;
position: fixed;
padding-top: 50px;
left: 0;
top: 0;
width: 100%;
height: 100%;
background-color: rgb(0, 0, 0);
background-color: rgba(0, 0, 0, 0.5);
z-index: 3000;
/* -webkit-animation-name: animatetop;
-webkit-animation-duration: 0.4s;
animation-name: animatetop; */
}

.modal-content {
border-radius: 20px;
position: relative;
background-color: white;
padding: 20px;
margin: auto;
margin-bottom: 20px;
width: 85%;
text-align: center;
overflow:auto;
}

.modal-small {
    margin-left: 20px;
    margin-right: 20px;
}


.close-btn {
float: right;
color: lightgray;
font-size: 24px;
font-weight: bold;
cursor: pointer;
}

.smile-icon {
    height: 40px;
    width: 40px;
}





/* animations */

@-webkit-keyframes animatetop {
from {
    top: -300px;
    opacity: 0
}

to {
    top: 0;
    opacity: 1
}
}

@keyframes animatetop {
from {
    top: -300px;
    opacity: 0
}

to {
    top: 0;
    opacity: 1
}
}


/* Drop down menu styles */

.dropbtn {
    background-color: #ebebeb;
    color: #000;
    padding: 10px;
    font-size: 16px;
    border: 2px solid #959595;
    cursor: pointer;
    width:300px;
    border-radius:22px
  }
  
  .dropdown {
    position: relative;
    display: inline-block;
  }
  
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #ffff;
    min-width: 300px;
    overflow: auto;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  .dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
  }
  
  .dropdown a:hover {background-color: #ddd;}
  
  .show {display: block;}

/* Backgrounds image grid  */

.img-holder {
    width:350px;
    position: relative;
  }
  .insta-image {
      height: 60px;
      width: 60px;
      float: left;
      background-color: #ccc;
      margin-left: 5px;
      margin-bottom: 5px;
  }
  
  .insta-image img {
      width: 60px;
  }

  header {
    background-color:#fff;
    color: #fff;
    top: 0;
    left: auto;
    right: 0;
    position: sticky;
    width: 100%;
    display: flex;
    z-index: 1100;
    box-sizing: border-box;
    flex-shrink: 0;
    flex-direction: column;
    min-height: 64px;
    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);

  }
  header .logo-holder {
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    max-height: 130px;
  }

  header .logo-holder img {
    height: 50px;
    margin: 12px;
}

  

